# agda-tree

./: .gitignore  Cargo.toml  README.md  coproduct.lagda.tree
src/: lib.rs  main.rs
src/command/: build.rs
