[package]
name = "agda-tree"
version = "0.3.5"
edition = "2021"
description = "A post-processing tool for html/*.tree produced by agda"
license = "GPL-3.0-or-later"
repository = "https://github.com/dannypsnl/agda-tree"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
html_parser = "0.7.0"
